--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
         <extensions>true</extensions>
         <configuration>
           <pluginKey>example</pluginKey>
-          <pluginClass>org.sonarsource.plugins.example.ExamplePlugin</pluginClass>
+          <pluginClass>org.sonarsource.plugins.custom.ExamplePlugin</pluginClass>
         </configuration>
       </plugin>
       <plugin>
