--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.sonarsource.sonarqube</groupId>
+          <artifactId>sonar-plugin-api</artifactId>
+          <version>6.7</version>
+      </dependency>
   </dependencies>
 
   <build>
@@ -56,7 +61,7 @@
         <extensions>true</extensions>
         <configuration>
           <pluginKey>example</pluginKey>
-          <pluginClass>org.sonarsource.plugins.custom.ExamplePlugin</pluginClass>
+          <pluginClass>org.sonarsource.plugins.custom.CustomPlugin</pluginClass>
         </configuration>
       </plugin>
       <plugin>
